# MCP_Server_SetUp

./: COMMANDS.md  README.md  main.py  pyproject.toml
BuildFirstMCPServer/demo-server/: client_fastmcp.py  client_mcp.py  server.py
BuildFirstMCPServer/weather-server/: client_fastmcp.py  server.py
MCPServerAndLocalAgent/multiMCPServer/: math_server.py
MCPServerAndLocalAgent/weather-server/: advanced_agentic_client.py  agentic_client.py  mcp-http.json  mcp-json.json  weather-server.py
MCPServerforDataAnalysis/data/: advanced_agentic_client.py  mcp-json.json
RAGusingMCP/: advanced_agentic_client.py  app.py  mcp-json.json  server.py
