[project]
name = "mcp-server-setup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv",
    "fastmcp",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.3.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=1.1.7",
    "mcp",
    "mcp-use[search]>=1.7.0",
    "pypdf>=6.10.2",
    "pypdf2>=3.0.1",
    "streamlit>=1.56.0",
]
